<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">菜市365</string>
    <!--登录页面-->
    <string name="login_title">用户登录</string>
    <string name="login_right">帮助</string>
    <string name="login_user">输入账号</string>
    <string name="login_password">输入密码</string>
    <string name="login_sure">登录</string>
    <string name="login_register">快速注册</string>
    <string name="login_forget">忘记密码</string>

    <!--重置密码页面-->
    <string name="forget_title">重置密码</string>
    <string name="forget_user">输入登录手机号</string>
    <string name="forget_password">输入新密码(6-20位字母/数字)</string>
    <string name="forget_sure">完成</string>
    <string name="forget_code">输入校验码</string>
    <string name="forget_code_index">获取校验码</string>



    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="suit">提&#160;&#160;&#160;&#160;交</string>
    
    <string name="nodetail">不详</string>


    <string name="replace_image">相机（建议横向拍摄）</string>
    <string name="see_image">相册</string>
    <string name="delete_image">删除图片</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_clip_image">ClipImageActivity</string>


    <!-- 预约单 reservation -->

    <string name="reservation">预&#160;&#160;约</string>
    <!-- 服务工单 server -->

<string name="newserver">新建服务工单</string>
    <string name="order">预&#160;&#160;&#160;&#160;约</string>
    <string name="noinfo">未获得</string>
    <string name="order_userinfo">用户信息</string>
    <string name="order_username">用户名</string>
    <string name="order_phone">手机号</string>
    <string name="car_info">车辆信息</string>
    <string name="car_number">车牌号</string>
    <string name="car_card">品&#160;&#160;牌</string>
    <string name="car_class">车&#160;&#160;系</string>
    <string name="pay_info">付款信息</string>
    <string name="pay_class">付款方式</string>
    <string name="pay_state">付款状态</string>
    <string name="order_state">订单状态</string>
    <string name="time_info">时间信息</string>
    <string name="order_time">下单时间</string>
    <string name="money_time">付款时间</string>
    <string name="done_time">完成时间</string>
    <string name="package_info">套餐信息</string>
    <string name="package_name">名称</string>
    <string name="package_nouse">未使用</string>
    <string name="package_used">已使用</string>
    <string name="serve_info">时间信息</string>
    <string name="goods_info">下单时间</string>
    <string name="stepb_package">套&#160;餐</string>
    <string name="stepb_serve">服&#160;务</string>
    <string name="stepb_goods">商&#160;品</string>
    <string name="stepb_done">完&#160;成</string>
    
    <!-- home -->
    <string name="home_order">预约单</string>
    <string name="home_serve">服务工单</string>
    <string name="home_title">汽车1+2ERP管理系统</string>
    <!-- news -->
    <string name="news_order">预约单</string>
    <string name="news_serve">服务工单</string>
    <string name="news_title">消息盒子</string>

    <!-- person -->
    <string name="person_return">意见反馈</string>
    <string name="person_renew">检查更新</string>
    <string name="person_out">退出登录</string>
    <string name="person_title">个人中心</string>
    <string name="person_back_hint">亲，请在此输入您的意见，我们会及时检查并处理！</string>
    <string name="registinfor">我们已发送验证码到这个号码：</string>
    <string name="inputcode">输入验证码</string>
    <string name="regetcode">获取验证码</string>
    <string name="inputrequestcode">邀请码&#160;&#160;（选填）</string>
    <string name="nogetcode">没有获取验证码</string>
    <string name="noSms">没有收到短信?</string>
    <string name="getcode_regist">获取验证码</string>
    <string name="submit_regist">提交注册</string>
    <string name="nextstep">下一步</string>
    <!-- 公共 -->
    <string name="desc_blank"></string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="phonehint_login">请输入用户名</string>
    <string name="password_login">请输入密码</string>
    <string name="regist_login">注册用户</string>
    <string name="forgetpasd_login">找回密码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载中</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>