<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basebackground"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_layout" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_05"
        android:contentDescription="@string/desc_blank"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/home_04"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="15dp"
            android:text="@string/home_order"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/home_03"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="15dp"
            android:text="@string/home_serve"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

</LinearLayout>