<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basebackground"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_layout" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/head"
        android:contentDescription="@string/desc_blank"
        android:scaleType="centerInside" />
    <TextView 
        android:id="@+id/storename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="世贸滨江店"
        android:layout_gravity="bottom"
        android:padding="15dp"
        android:background="#cc000000"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
                />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/btnstylewhite"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/center_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_center_03"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/person_return"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btnstylewhite"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/center_renew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_center_04"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/person_renew"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/center_getout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btnstyleblue"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/person_out"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>