<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basebackground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btnstylewhite"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/selectpackage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/new_s_04"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/stepb_package"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btnstylewhite"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/selectserve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/new_s_06"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/stepb_serve"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        android:background="@drawable/btnstylewhite"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/new_s_05"
            android:drawablePadding="10dp"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/stepb_package"
            android:textColor="@color/TextColordarker"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/desc_blank"
            android:gravity="right"
            android:src="@drawable/arrow_r" />
    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/addorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btnstyleblue"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/stepb_done"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>