<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnstylewhite"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/distance_huge"
            android:gravity="center"
            android:text="选择图片"
            android:textColor="@color/TextColordarker"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/TextColordarker" >
        </LinearLayout>

        <TextView
            android:id="@+id/photo_xiangji"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/replace_image"
            android:textColor="@color/text_blue"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/TextColordarker" >
        </LinearLayout>

        <TextView
            android:id="@+id/photo_xiangce"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/see_image"
            android:textColor="@color/text_blue"
            android:textSize="22dp" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/TextColordarker"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/del_photo"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/delete_image"
            android:textColor="@color/text_blue"
            android:textSize="22dp" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/TextColordarker"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="取消"
            android:textColor="@color/TextColordarker"
            android:textSize="22dp" />
    </LinearLayout>

</RelativeLayout>