<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basebackground"
    android:orientation="vertical"
    tools:context=".ForgetPasdActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/basebackground"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/f_password_05"
                    android:contentDescription="@string/desc_blank" />

                <EditText
                    android:id="@+id/phone_forgetpasd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/phonehint_login"
                    android:inputType="number"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/getCode_forgrtpasd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnstyleblue"
                    android:padding="5dp"
                    android:text="获取验证码"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_float"
                android:layout_marginLeft="@dimen/distance_superhuge"
                android:background="@color/basebackground"
                android:contentDescription="@string/desc_blank" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="没收到短信？请检查是否被您的手机安全软件屏蔽，或点击获取验证码更新发送"
                android:textColor="@color/TextColordarker" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/f_password_06" />

                <EditText
                    android:id="@+id/code_forgetpasd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/inputcode"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_float"
                android:layout_marginLeft="@dimen/distance_superhuge"
                android:background="@color/basebackground"
                android:contentDescription="@string/desc_blank" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/f_password_07"
                    android:contentDescription="@string/desc_blank" />

                <EditText
                    android:id="@+id/pasd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入新密码"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_float"
                android:layout_marginLeft="@dimen/distance_superhuge"
                android:background="@color/basebackground"
                android:contentDescription="@string/desc_blank" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/f_password_07"
                    android:contentDescription="@string/desc_blank" />

                <EditText
                    android:id="@+id/repasd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请再次输入新密码"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <Button
                android:id="@+id/next_forgetpasd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnstyleblue"
                android:text="提交"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>